[project]
name = "est-alan-scheduler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pytest-cov>=6.2.1",
]

[tool.setuptools]
packages = ["est_alan_scheduler"]

[project.scripts]
est-alan-scheduler = "est_alan_scheduler.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "freezegun>=1.4.0",
]

